--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div class="container">
 
       <div id="card-top">
-        <img src="images\bg-pattern-card.svg">
+        <img src="images\bg-pattern-card.svg" alt="card-top">
       </div>
 
       <div id="picture">
-        <img src="images\image-victor.jpg">
+        <img src="images\image-victor.jpg" alt="profile-picture">
       </div>
 
       <div id="personal">
@@ -59,13 +59,15 @@
 
      </div>
 
+     <div class="footer">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+    
     </div>
 
     
   </body>
-        <div class="footer">
-          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-          Coded by <a href="#">Your Name Here</a>.
-        </div>
+
  
 </html>
