--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
   <body>
 
-
+    <div class="bg-top"></div>
     <div class="container">
 
       <div id="card-top">
@@ -58,6 +58,8 @@
 
 
      </div>
+
+     <div class="bg-bottom"></div>
 
      <div class="footer">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
