--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 </head>
   <body>
 
-    <div class="bg-top"></div>
+    <div class="bg-1">
+      <img class="bg-top" src="images/bg-pattern-top.svg" alt="top-img">
+    </div>
+
     <div class="container">
 
       <div id="card-top">
@@ -59,7 +62,9 @@
 
      </div>
 
-     <div class="bg-bottom"></div>
+     <div class="bg-2">
+      <img class="bg-bottom" src="images/bg-pattern-top.svg" alt="bottom-img">
+    </div>
 
      <div class="footer">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
