--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 </head>
   <body>
 
-    <div class="bg-1">
-      <img class="bg-top" src="images/bg-pattern-top.svg" alt="top-img">
-    </div>
+
 
     <div class="container">
 
@@ -60,16 +58,13 @@
       </div>
 
 
-     </div>
+      </div>
 
-     <div class="bg-2">
-      <img class="bg-bottom" src="images/bg-pattern-top.svg" alt="bottom-img">
-    </div>
 
-     <div class="footer">
+     <!--div class="footer">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </div-->
     
     </div>
 
